🤖 Machine translation of missing values

--- a/locales/eu/json.json
+++ b/locales/eu/json.json
@@ -41,7 +41,7 @@
     "Aland Islands": "Aland Uharteak",
     "Alaska": "Alaska",
     "Albania": "Albania",
-    "Alberta": "Alberta",
+    "Alberta": "Iverta",
     "Algeria": "Aljeria",
     "All of the people that are part of this team.": "Pertsona guztiak dira, eta horren zati taldeak.",
     "All resources loaded.": "Baliabide guztiak kargatu.",
@@ -190,7 +190,7 @@
     "Congo": "Kongoko",
     "Congo, Democratic Republic": "Kongoko Errepublika Demokratikoa",
     "Congo, the Democratic Republic of the": "Kongo, Errepublika Demokratikoa",
-    "Connecticut": "Connecticut",
+    "Connecticut": "Contancicult",
     "Constant": "Etengabeko",
     "Contact Information": "Harremanetarako informazioa",
     "Cook Islands": "Cook Uharteak",
@@ -234,7 +234,7 @@
     "Day Trial": "Eguneko proba",
     "December": "Abenduaren",
     "Decrease": "Jaitsiera",
-    "Delaware": "Delaware",
+    "Delaware": "Delakoa",
     "Delete": "Ezabatu",
     "Delete Account": "Ezabatu Kontua",
     "Delete Announcement": "Ezabatu iragarkia",
@@ -414,7 +414,7 @@
     "June": "Ekainaren",
     "Kansas": "Kansas",
     "Kazakhstan": "Kazakhstan",
-    "Kentucky": "Kentucky",
+    "Kentucky": "Kentucapy",
     "Kenya": "Kenya",
     "Key": "Gakoa",
     "Kiosk": "Kioskoa",
